src/types/tests/snapshots/tgbot__types__tests__gift__send_gift-6.snap
---
source: src/types/tests/gift.rs
expression: actual_data
---
{
  "gift_id": "test",
  "pay_for_upgrade": true,
  "text": "test",
  "text_parse_mode": "Markdown",
  "user_id": 1
}
