src/types/tests/snapshots/tgbot__types__tests__gift__send_gift.snap
---
source: src/types/tests/gift.rs
expression: actual_data
---
{
  "chat_id": 1,
  "gift_id": "test"
}
